--- a/FYP/FYP.csproj
+++ b/FYP/FYP.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlertClass.cs" />
+    <Compile Include="Subnet.cs" />
+    <Compile Include="Validation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
