--- a/FYP/FYP.csproj
+++ b/FYP/FYP.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlertClass.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Subnet.cs" />
     <Compile Include="Validation.cs" />
     <Compile Include="Form1.cs">
@@ -72,6 +73,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Node.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
