--- a/FYP/App.config
+++ b/FYP/App.config
@@ -10,21 +10,19 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="System.Data.SQLite.EF6" />
-      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-      <remove invariant="System.Data.SQLite" />
-      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-    </DbProviderFactories>
-  </system.data>
   <connectionStrings>
     <add name="nodesEntities" connectionString="metadata=res://*/nodesDB.csdl|res://*/nodesDB.ssdl|res://*/nodesDB.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\DataBase.db&quot;" providerName="System.Data.EntityClient" />
     <add name="nodeEntities" connectionString="metadata=res://*/DatabaseSqlite.csdl|res://*/DatabaseSqlite.ssdl|res://*/DatabaseSqlite.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\DataBase.db&quot;" providerName="System.Data.EntityClient" />
     <add name="mainEntities" connectionString="metadata=res://*/DatabaseSqlite.csdl|res://*/DatabaseSqlite.ssdl|res://*/DatabaseSqlite.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\NodesDatabase.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
 </configuration>
