--- a/FYP/App.config
+++ b/FYP/App.config
@@ -18,11 +18,14 @@
     <add name="nodesEntities" connectionString="metadata=res://*/nodesDB.csdl|res://*/nodesDB.ssdl|res://*/nodesDB.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\DataBase.db&quot;" providerName="System.Data.EntityClient" />
     <add name="nodeEntities" connectionString="metadata=res://*/DatabaseSqlite.csdl|res://*/DatabaseSqlite.ssdl|res://*/DatabaseSqlite.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\DataBase.db&quot;" providerName="System.Data.EntityClient" />
     <add name="mainEntities" connectionString="metadata=res://*/DatabaseSqlite.csdl|res://*/DatabaseSqlite.ssdl|res://*/DatabaseSqlite.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\NodesDatabase.db&quot;" providerName="System.Data.EntityClient" />
+    <add name="myDatabaseEntities" connectionString="metadata=res://*/myDatabase.csdl|res://*/myDatabase.ssdl|res://*/myDatabase.msl;provider=System.Data.SQLite.EF6;provider connection string=&quot;data source=C:\Users\Grim\source\repos\FYP\nodesDB.db&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
-    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
   </system.data>
 </configuration>
