Added options window

--- a/FYP/FYP.csproj
+++ b/FYP/FYP.csproj
@@ -105,6 +105,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Node.cs" />
+    <Compile Include="Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Options.Designer.cs">
+      <DependentUpon>Options.cs</DependentUpon>
+    </Compile>
     <Compile Include="ReadAndWrite.cs" />
     <Compile Include="Subnet.cs" />
     <Compile Include="Validation.cs" />
@@ -124,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyCheckBox.resx">
       <DependentUpon>MyCheckBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options.resx">
+      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
