--- a/FYP/FYP.csproj
+++ b/FYP/FYP.csproj
@@ -91,6 +91,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add_Node.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Node.Designer.cs">
+      <DependentUpon>Add_Node.cs</DependentUpon>
+    </Compile>
     <Compile Include="AlertClass.cs" />
     <Compile Include="DatabaseIO.cs" />
     <Compile Include="Email.cs" />
@@ -126,6 +132,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Add_Node.resx">
+      <DependentUpon>Add_Node.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
