--- a/FYP/FYP.csproj
+++ b/FYP/FYP.csproj
@@ -99,6 +99,12 @@
     </Compile>
     <Compile Include="AlertClass.cs" />
     <Compile Include="DatabaseIO.cs" />
+    <Compile Include="Delete_Node.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Delete_Node.Designer.cs">
+      <DependentUpon>Delete_Node.cs</DependentUpon>
+    </Compile>
     <Compile Include="Email.cs" />
     <Compile Include="EmailServer.cs" />
     <Compile Include="Error.cs" />
@@ -135,6 +141,9 @@
     <EmbeddedResource Include="Add_Node.resx">
       <DependentUpon>Add_Node.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Delete_Node.resx">
+      <DependentUpon>Delete_Node.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +166,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
